<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_new_chat"
        android:orderInCategory="100"
        android:title="@string/menu_new_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save_file"
        android:orderInCategory="100"
        android:title="@string/menu_save_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_change_nick"
        android:orderInCategory="100"
        android:title="@string/menu_change_nick"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_change_pwd"
        android:orderInCategory="100"
        android:title="@string/menu_change_pwd"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_change_chat_pwd"
        android:orderInCategory="100"
        android:title="@string/menu_change_chat_pwd"
        app:showAsAction="never" />
    app:showAsAction="never" />
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>
